--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chartjs-plugin-zoom": "^0.7.5",
     "core-js": "^2.5.4",
     "firebase": "^7.8.2",
+    "moment": "^2.24.0",
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
